Bugfix: Reservation and RoomView
Reservation view not saving when its initiated from RoomView fixed.